# axum-middleware

./: .gitignore  Cargo.toml  README.md  REAME.md
examples/inactivity/: Cargo.toml
examples/inactivity/src/: main.rs
examples/jwt-auth-delegate/: Cargo.toml  README.md
examples/jwt-auth-delegate/src/: main.rs
src/: inactivity.rs  jwt_auth_delegate.rs  lib.rs
